performance fixes on mobile devices.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -54,6 +54,7 @@
 	}
 
 	.menuBgBlur{
+		filter: none;
 		top: 100vh !important;
 	}
 
